# study-planner

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: admin.rs  ai.rs  auth.rs  countdown.rs  mod.rs  pomodoro.rs  preference.rs  review.rs  stats.rs  subject.rs  task.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: ai_config.rs  countdown.rs  mod.rs  pomodoro.rs  review.rs  study_preference.rs  subject.rs  task.rs  user.rs
src-tauri/src/services/: ai_service.rs  auth_service.rs  countdown_service.rs  mod.rs  pomodoro_service.rs  preference_service.rs  review_service.rs  stats_service.rs  subject_service.rs  task_service.rs  user_service.rs
src-tauri/src/tests/: auth_tests.rs  mod.rs  user_tests.rs
src-tauri/src/utils/: fuzzy_match.rs  mod.rs
src/components/: SubjectSelect.tsx
src/pages/: AIChat.tsx  Countdown.tsx  Login.tsx  Pomodoro.tsx  Review.tsx  Stats.tsx  StudyPlan.tsx  Subjects.tsx  UserManagement.tsx  WrongNotes.tsx
src/stores/: authStore.ts  themeStore.ts
