[package]
name = "study-planner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "study_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }

# Decimal 类型支持
rust_decimal = "1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "2"
anyhow = "1"

# HTTP 客户端 (用于 AI API)
reqwest = { version = "0.12", features = ["json"] }

# 模糊匹配
strsim = "0.11"

# UUID 生成 (用于会话令牌)
uuid = { version = "1", features = ["v4"] }

# 属性测试
[dev-dependencies]
proptest = "1"

